Update style main index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Naval Combat Helper TEST</h1>
+  <h1>Naval Combat Helper  2TEST</h1>
 
   <p>Se vedi questa scritta, l'index.html funziona e GitHub Pages sta caricando la pagina giusta.</p>
 
