--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Naval Combat Helper</h1>
-  <p>Tool per creare navi, vedere la mappa e gestire i turni.</p>
+  <p>Tool per creare navi, vedere la mappa e gestire i turni 2.</p>
 
   <div id="top-bar">
     <span id="mode-label">Modalità: Creazione</span>
