--- a/index.html
+++ b/index.html
@@ -73,11 +73,6 @@
             <input type="number" id="ship-y" min="0">
           </label>
 
-          <label>
-            HP scafo max:
-            <input type="number" id="ship-maxhp" min="1" value="30">
-          </label>
-
           <fieldset>
             <legend>Stiva (palle / legno / cibo)</legend>
             <label>
@@ -91,6 +86,77 @@
             <label>
               Cibo:
               <input type="number" id="cargo-food" min="0">
+            </label>
+          </fieldset>
+
+          <fieldset>
+            <legend>PF Ruoli (lascia vuoto per usare 30 × livello)</legend>
+            <label>
+              Ruolo 1:
+              <input type="number" id="role1-hp" min="0">
+            </label>
+            <label>
+              Ruolo 2:
+              <input type="number" id="role2-hp" min="0">
+            </label>
+            <label>
+              Ruolo 3:
+              <input type="number" id="role3-hp" min="0">
+            </label>
+            <label>
+              Ruolo 4:
+              <input type="number" id="role4-hp" min="0">
+            </label>
+            <label>
+              Ruolo 5:
+              <input type="number" id="role5-hp" min="0">
+            </label>
+            <label>
+              Ruolo 6:
+              <input type="number" id="role6-hp" min="0">
+            </label>
+          </fieldset>
+
+          <fieldset>
+            <legend>Macchine d'assedio (max in base al tipo)</legend>
+            <label>
+              Slot 1:
+              <select id="siege-slot-1">
+                <option value="">— vuoto —</option>
+                <option value="mortaio">Mortaio</option>
+                <option value="ballista">Ballista</option>
+                <option value="barile">Barile</option>
+                <option value="polena">Polena</option>
+                <option value="scudo">Scudo</option>
+                <option value="lanciafiamme">Lanciafiamme</option>
+                <option value="rostro">Rostro</option>
+              </select>
+            </label>
+            <label>
+              Slot 2:
+              <select id="siege-slot-2">
+                <option value="">— vuoto —</option>
+                <option value="mortaio">Mortaio</option>
+                <option value="ballista">Ballista</option>
+                <option value="barile">Barile</option>
+                <option value="polena">Polena</option>
+                <option value="scudo">Scudo</option>
+                <option value="lanciafiamme">Lanciafiamme</option>
+                <option value="rostro">Rostro</option>
+              </select>
+            </label>
+            <label>
+              Slot 3:
+              <select id="siege-slot-3">
+                <option value="">— vuoto —</option>
+                <option value="mortaio">Mortaio</option>
+                <option value="ballista">Ballista</option>
+                <option value="barile">Barile</option>
+                <option value="polena">Polena</option>
+                <option value="scudo">Scudo</option>
+                <option value="lanciafiamme">Lanciafiamme</option>
+                <option value="rostro">Rostro</option>
+              </select>
             </label>
           </fieldset>
 
